--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TheProject"
         tools:targetApi="31">
+
         <activity
             android:name=".UserProfile.UserProfileActivity"
             android:exported="false" />
@@ -46,7 +47,8 @@
 
         <meta-data
             android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
+            android:resource="@array/preloaded_fonts"
+            android:windowSoftInputMode="adjustPan"/>
     </application>
 
 </manifest>
